refactor(fullstack): unify API contracts, improve parking logic and dashboard UX
- Backend:
  - Migrated to Request/Response DTO pattern across modules
  - Added unique vehicle plate validation and cleaner vehicle controller
  - Improved parking statistics using projections
  - Centralized error handling with GlobalExceptionHandler
  - Fixed naming inconsistencies and removed deprecated controllers/DTOs

- Frontend:
  - Reorganized dashboard information architecture
  - Moved filters to contextual scope to avoid global confusion
  - Separated global stats from filtered data views
  - Simplified admin overview and improved visual spacing
  - Preserved reactive API-driven filtering

- General:
  - Improved consistency between frontend and backend contracts