@@ -1,7 +1,5 @@
 package co.edu.unipacifico.demo.services;
 
-import java.util.stream.Collectors;
-
 import org.springframework.stereotype.Service;
 
 import co.edu.unipacifico.demo.mappers.VehiculosMapper;
@@ -9,71 +7,73 @@ import co.edu.unipacifico.demo.models.Vehiculos;
 import co.edu.unipacifico.demo.repositories.VehiculosRepository;
 import co.edu.unipacifico.demo.repositories.VehiculosSpecifications;
 import lombok.RequiredArgsConstructor;
-import co.edu.unipacifico.demo.dtos.VehiculosDTO;
+import co.edu.unipacifico.demo.dtos.VehiculosRequest;
+import co.edu.unipacifico.demo.dtos.VehiculosResponse;
 import co.edu.unipacifico.demo.exceptions.DatabaseException;
+import co.edu.unipacifico.demo.exceptions.InvalidOperationExeception;
+import co.edu.unipacifico.demo.exceptions.ResourceNotFoundException;
 
 import java.util.List;
-import java.util.Optional;
 
 @RequiredArgsConstructor
 @Service
 public class VehiculosServiceImpl implements VehiculosService {
 
     // Ver inmutabilidad
-    private final VehiculosMapper VehiculosMapper;
-    private final VehiculosRepository VehiculosRepository;
+    private final VehiculosMapper vehiculosMapper;
+    private final VehiculosRepository vehiculosRepository;
     
     
-    public VehiculosDTO crearVehiculos(VehiculosDTO vehiculoDTO){
-        Vehiculos vehiculo = VehiculosMapper.toEntity(vehiculoDTO);
-        Vehiculos vehiculoGuardado = VehiculosRepository.save(vehiculo);
-        return VehiculosMapper.toDTO(vehiculoGuardado);
+    public VehiculosResponse crearVehiculos(VehiculosRequest vehiculo){
+
+        if (vehiculosRepository.findByPlaca(vehiculo.getPlaca()).isPresent()) {
+            throw new InvalidOperationExeception(
+                "Ya existe un vehículo con la placa: " + vehiculo.getPlaca()
+            );
+        }
+        Vehiculos registrarVehiculo = vehiculosMapper.toEntity(vehiculo);
+        Vehiculos vehiculoGuardado = vehiculosRepository.save(registrarVehiculo);
+        return vehiculosMapper.toDTO(vehiculoGuardado);
     }
     
     public void eliminarVehiculos(Long id){
-        if (VehiculosRepository.existsById(id)) {
-           VehiculosRepository.deleteById(id);
+        if (vehiculosRepository.existsById(id)) {
+           vehiculosRepository.deleteById(id);
         } else {
-            throw new RuntimeException("Vehiculo no encontrado con id: " + id); 
+            throw new InvalidOperationExeception("Vehiculo no encontrado con id: " + id); 
         }
         
     }
 
-    public VehiculosDTO actualizarVehiculos(Long id, VehiculosDTO vehiculoDTO){
-        Optional<Vehiculos> vehiculoExistente = VehiculosRepository.findById(id);
-        if (!vehiculoExistente.isPresent()) {
-            Vehiculos vehiculo = vehiculoExistente.get();
-            vehiculo.setPlaca(vehiculoDTO.getPlaca());            
-            vehiculo.setTipo(vehiculoDTO.getTipo());
-            Vehiculos vehiculoActualizado = VehiculosRepository.save(vehiculo);
-            return VehiculosMapper.toDTO(vehiculoActualizado);
-        } else
-            throw new RuntimeException("Vehiculo no encontrado con id: " + id);
-            }
+    public VehiculosResponse actualizarVehiculos(Long id, VehiculosRequest vehiculoDTO) {
+        Vehiculos vehiculo = vehiculosRepository.findById(id)
+            .orElseThrow(() ->
+                new ResourceNotFoundException("Vehiculo no encontrado con id: " + id));
+
+        vehiculo.setPlaca(vehiculoDTO.getPlaca());
+        vehiculo.setTipo(vehiculoDTO.getTipo());
+
+        Vehiculos vehiculoActualizado = vehiculosRepository.save(vehiculo);
+        return vehiculosMapper.toDTO(vehiculoActualizado);
+    }
+
 
     @Override
-    public Optional<List<VehiculosDTO>> consultarVehiculos(String tipo) {
-        List<VehiculosDTO> vehiculos;
+    public List<VehiculosResponse> consultarVehiculos(String tipo) {
+        List<VehiculosResponse> vehiculos;
     
     try {
-          // 1. Obtener datos del repositorio
-          vehiculos = VehiculosRepository.findAll(
-            VehiculosSpecifications.buscarVehiculos(tipo)).stream()
-              .map(VehiculosMapper::toDTO)
-              .collect(Collectors.toList());
+        return vehiculosRepository
+            .findAll(VehiculosSpecifications.buscarVehiculos(tipo))
+            .stream()
+            .map(vehiculosMapper::toDTO)
+            .toList();
             
       } catch (Exception e) {
-          // 2. Captura cualquier excepción de persistencia (conexión, timeout, etc.)
-          // y relanza como tu excepción personalizada.
           throw new DatabaseException(
             "Error al consultar vehículos en la base de datos.", e);
       }
-    
-      if (vehiculos.isEmpty()) {
-          return Optional.empty();
-      }
-    
-        return Optional.of(vehiculos);
+
     }
 
 }
